	* Fix lots of missing checks on allocation failures and parse of 
	  NSEC with many types and max parse length in hosts_frm_fp routine
	  and off by one in read_anchor_file routine (thanks Dan Kaminsky and
	  Justin Ferguson).
	* Drill: Print both SHA-1 and SHA-256 corresponding DS records.
	* Print correct WHEN in query packet (is not always 1-1-1970)

1.6.7	2010-11-08
	* EXPERIMENTAL ecdsa implementation, please do not enable on real
	  servers.
	* GOST code enabled by default (RFC 5933).
	* bugfix #326: ignore whitespace between directives and their values.
	* Header comment to advertise ldns_axfr_complete to check for
	  successfully completed zone transfers.
	* read resolv.conf skips interface labels, e.g. %eth0.
	* Fix drill verify NSEC3 denials.
	* Use closesocket() on windows.
	* Add ldns_get_signing_algorithm_by_name that understand aliases,
	  names changed to RFC names and aliases for compatibility added.
	* bugfix: don't print final dot if the domain is relative.
	* bugfix: resolver search continue when packet rcode != NOERROR.
	* bugfix: resolver push all domains in search directive to list.
	* bugfix: resolver search by default includes the root domain.
	* bugfix: tcp read could fail on single octet recv.
	* bugfix: read of RR in unknown syntax with missing fields.
	* added ldns_pkt_tsig_sign_next() and ldns_pkt_tsig_verify_next()
	  to sign and verify TSIG RRs on subsequent messages
	  (section 4.4, RFC 2845, thanks to Michael Sheldon).
	* bugfix: signer sigs nsecs with zsks only.
	* bugfix #333: fix ldns_dname_absolute for name ending with backslash.

1.6.6	2010-08-09
	* Fix ldns_rr_clone to copy question rrs properly.
	* Fix ldns_sign_zone(_nsec3) to clone the soa for the new zone.
	* Fix ldns_wire2dname size check from reading 1 byte beyond buffer end.
	* Fix ldns_wire2dname from reading 1 byte beyond end for pointer.
	* Fix crash using GOST for particular platform configurations.
	* extern C declarations used in the header file.